fix flex issue on safari

--- a/src/style/gallery.css
+++ b/src/style/gallery.css
@@ -5,11 +5,26 @@
   margin: 0 auto;
 }
 
+.display-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flexbox;
+}
+
+/* .no-d-flex {
+  display: table-cell;
+}
+
+.no-d-flex img {
+  margin: 0 auto;
+} */
+
 /* media query to change behavior of image/image containers on small screens */
 @media only screen and (min-width: 768px) {
   .col-md-4 {
-    -ms-flex:0 0 30%;
-    flex:0 0 30%;
+    -webkit-flex: 1 0 30%;
+    -ms-flex: 1 0 30%;
+    flex: 1 0 30%;
     max-width:30%;
   }
 }
